<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page.AboutMeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about_dorae"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:background="@color/colorBackground"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimary"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                style="@style/TextAppearance.Sight.NormalText"
                android:text="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:padding="@dimen/spacing_large"
                android:lineSpacingExtra="@dimen/spacing_normal"
                android:gravity="center"
                style="@style/TextAppearance.Sight.NormalText"
                android:textSize="12sp"
                android:text="@string/about_g2v_desc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@color/black200"/>
            <TextView
                android:id="@+id/aboutAppFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_feedback"
                android:text="@string/provide_suggestion"/>
            <TextView
                android:id="@+id/aboutAppDevPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_event_note_black_24dp"
                android:text="@string/develop_plan"/>
            <TextView
                android:id="@+id/aboutAppDonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_card_giftcard_white_24dp"
                android:text="@string/donation_support"/>
            <TextView
                android:id="@+id/aboutAppOpenSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_code_black_24dp"
                android:text="@string/open_source_allowed"/>
            <TextView
                android:id="@+id/aboutAppAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:text="@string/about_me"/>
            <TextView
                android:id="@+id/aboutAppContactMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:drawablePadding="@dimen/spacing_large"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:text="@string/contact_me"/>

            <TextView
                android:id="@+id/aboutAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.G2Video.TextButton"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>