<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    app:cardCornerRadius="@dimen/card_corner_normal"
    app:cardBackgroundColor="#30363F"
    app:cardElevation="@dimen/card_z_normal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/common_dialog_ic"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/ic_avatar"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/common_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_normal"
            style="@style/TextAppearance.Sight.NormalText"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/common_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:padding="@dimen/margin_normal"
            android:textColor="@color/textColorSecondaryLight"
            android:textSize="@dimen/text_size_micro"
            android:text="@string/develop_plan_content"/>
        <LinearLayout
            android:id="@+id/common_dialog_clip_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_micro"
                android:paddingBottom="@dimen/spacing_micro"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:gravity="center"
                android:background="@drawable/clip_shape"
                android:textSize="@dimen/text_size_micro"
                android:textColor="#78B552"
                android:text="@string/clip_content_android"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_micro"
                android:paddingBottom="@dimen/spacing_micro"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:gravity="center"
                android:background="@drawable/clip_shape"
                android:textSize="@dimen/text_size_micro"
                android:textColor="@color/black"
                android:text="@string/clip_content_hack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_micro"
                android:paddingBottom="@dimen/spacing_micro"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:gravity="center"
                android:background="@drawable/clip_shape"
                android:textSize="@dimen/text_size_micro"
                android:textColor="#0B61CC"
                android:text="@string/clip_content_freedom"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>