<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filterSheetContainer"
    android:elevation="@dimen/bottom_sheet_elevation"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_z_low"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/filterReset"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:minWidth="0dp"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/reset"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/spacing_large"
            android:text="@string/filter"
            android:textAppearance="@style/TextAppearance.Sight.ToolBar" />

        <ImageButton
            android:id="@+id/filterClose"
            android:layout_width="@dimen/ic_min_touch_area"
            android:layout_height="@dimen/ic_min_touch_area"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_filter_config"
            android:scaleType="center"
            android:tint="?attr/colorControlNormal"
            app:srcCompat="@drawable/ic_expand_more" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_normal"
        android:paddingVertical="@dimen/spacing_normal"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:spanCount="3"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_option_tag"
        tools:targetApi="o" />
</androidx.constraintlayout.widget.ConstraintLayout>